--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 						<p>Crickdle is a love letter to Test cricket. There's a new cricketer to guess every day.<br><br>Please send any enquiries about Crickdle to ayushsanghavi13 [at] gmail [dot] com</p>
 					</div>
 					 <div class="share-container">
-        <button class="share-button">Share</button>
+        <button class="share-button">SHARE</button>
       </div>
 				</div>
 			</div>
