--- a/index.html
+++ b/index.html
@@ -425,14 +425,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "Australia",
-				nation2: "England",
-				date: "Nov 23-27, 2006",
-				score: "Australia 602/9d & 202/1d, England (T: 648) 157 & 370; Australia won by 277 runs",
-				crickdlequestion: "Australia player scored 196 & 60* in this match?"
+				nation1: "South Africa",
+				nation2: "India",
+				date: "Jan 2-6, 2011",
+				score: "South Africa 362 & 341, India (T: 340) 364 & 166/3; Match drawn",
+				crickdlequestion: "South Africa player scored 161 & 109* in this match?"
 			};
 
-			const correctPlayer = ["PONTING"];
+			const correctPlayer = ["KALLIS"];
 
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
