--- a/index.html
+++ b/index.html
@@ -425,14 +425,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "South Africa",
-				nation2: "India",
-				date: "Jan 2-6, 2011",
-				score: "South Africa 362 & 341, India (T: 340) 364 & 166/3; Match drawn",
-				crickdlequestion: "South Africa player scored 161 & 109* in this match?"
+				nation1: "New Zealand",
+				nation2: "Pakistan",
+				date: "Nov 25-29, 2016",
+				score: "New Zealand 271 & 313/5d, Pakistan (T: 369) 216 & 230; New Zealand won by 138 runs",
+				crickdlequestion: "New Zealand player scored 29 and took 6/80 & 2/60 in this match?"
 			};
 
-			const correctPlayer = ["KALLIS"];
+			const correctPlayer = ["SOUTHEE"];
 
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
