--- a/index.html
+++ b/index.html
@@ -425,14 +425,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "New Zealand",
-				nation2: "Pakistan",
-				date: "Nov 25-29, 2016",
-				score: "New Zealand 271 & 313/5d, Pakistan (T: 369) 216 & 230; New Zealand won by 138 runs",
-				crickdlequestion: "New Zealand player scored 29 and took 6/80 & 2/60 in this match?"
+				nation1: "England",
+				nation2: "West Indies",
+				date: "Aug 19-21, 2004",
+				score: "England (T: 1) 470 & 4/0, West Indies (f/o) 152 & 318; England won by 10 wickets",
+				crickdlequestion: "England player scored 36* and took 6/46 & 3/75 in this match?"
 			};
 
-			const correctPlayer = ["SOUTHEE"];
+			const correctPlayer = ["HARMISON"];
 
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
