--- a/index.html
+++ b/index.html
@@ -425,14 +425,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "England",
-				nation2: "West Indies",
-				date: "Aug 19-21, 2004",
-				score: "England (T: 1) 470 & 4/0, West Indies (f/o) 152 & 318; England won by 10 wickets",
-				crickdlequestion: "England player scored 36* and took 6/46 & 3/75 in this match?"
+				nation1: "Pakistan",
+				nation2: "Sri Lanka",
+				date: "Oct 26-29, 2011",
+				score: "Sri Lanka 239 & 257, Pakistan (T: 94) 403 & 94/1; Pakistan won by 9 wickets",
+				crickdlequestion: "Pakistan player scored 20 and took 3/45 & 5/68 in this match?"
 			};
 
-			const correctPlayer = ["HARMISON"];
+			const correctPlayer = ["AJMAL"];
 
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
