--- a/index.html
+++ b/index.html
@@ -425,14 +425,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "Pakistan",
-				nation2: "Sri Lanka",
-				date: "Oct 26-29, 2011",
-				score: "Sri Lanka 239 & 257, Pakistan (T: 94) 403 & 94/1; Pakistan won by 9 wickets",
-				crickdlequestion: "Pakistan player scored 20 and took 3/45 & 5/68 in this match?"
+				nation1: "India",
+				nation2: "West Indies",
+				date: "Oct 4-6, 2018",
+				score: "India 649/9d, West Indies (f/o) 181 & 196; India won by an innings and 272 runs",
+				crickdlequestion: "India player scored 134 in this match?"
 			};
 
-			const correctPlayer = ["AJMAL"];
+			const correctPlayer = ["SHAW"];
 
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
