--- a/index.html
+++ b/index.html
@@ -348,6 +348,22 @@
 .share-button:hover {
   opacity: 0.8;
 }
+
+.twitter-button {
+  background-color: #1da1f2;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+}
+
+.twitter-button:hover {
+  opacity: 0.8;
+}
 			
 			.toolbar-help img,
 			.toolbar-info img {
@@ -389,6 +405,7 @@
 					</div>
 					 <div class="share-container">
         <button class="share-button">SHARE</button>
+        <a href="https://twitter.com/Crickdle" target="_blank" rel="noopener" class="twitter-button">TWITTER</a>
       </div>
 				</div>
 			</div>
