--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 }
 
 .twitter-button {
-  background-color: #1da1f2;
+  background-color: #1dc278;
   color: white;
   border: none;
   padding: 8px 16px;
@@ -359,6 +359,7 @@
   font-size: 16px;
   font-weight: bold;
   font-family: Arial, sans-serif;
+  text-decoration: none;
 }
 
 .twitter-button:hover {
