--- a/index.html
+++ b/index.html
@@ -331,6 +331,9 @@
 			.share-container {
   margin-top: 20px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .share-button {
@@ -343,6 +346,7 @@
   font-size: 16px;
   font-weight: bold;
   font-family: Arial, sans-serif;
+  margin-right: 20px;
 }
 
 .share-button:hover {
