--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
   font-weight: bold;
   font-family: Arial, sans-serif;
   margin-right: 20px;
+  height: 40px;
 }
 
 .share-button:hover {
@@ -364,6 +365,7 @@
   font-weight: bold;
   font-family: Arial, sans-serif;
   text-decoration: none;
+  height: 40px;
 }
 
 .twitter-button:hover {
