--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   "@type": "Game",
   "name": "Crickdle - Daily Cricket Guessing Game!",
   "url": "https://crickdle.com",
-  "description": "Crickdle is a daily cricket guessing game inspired by Wordle. Test your cricket knowledge and guess the cricketer based on their stats.",
+  "description": "Crickdle is a daily cricket guessing game. Test your cricket knowledge and guess the cricketer based on their stats.",
   "dateCreated": "2023-02-19",
   "numberOfPlayers": "1",
   "gamePlatform": "Web",
