--- a/index.html
+++ b/index.html
@@ -449,14 +449,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "India",
-				nation2: "West Indies",
-				date: "Oct 4-6, 2018",
-				score: "India 649/9d, West Indies (f/o) 181 & 196; India won by an innings and 272 runs",
-				crickdlequestion: "India player scored 134 in this match?"
+				nation1: "Sri Lanka",
+				nation2: "Australia",
+				date: "Mar 24-28, 2004",
+				score: "Australia 401 & 375, Sri Lanka (T: 370) 407 & 248; Australia won by 121 runs",
+				crickdlequestion: "Australia player scored 153 and took 3/50 & 3/42 in this match?"
 			};
 
-			const correctPlayer = ["SHAW"];
+			const correctPlayer = ["LEHMANN"];
 
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
