--- a/index.html
+++ b/index.html
@@ -458,14 +458,21 @@
 
 			const correctPlayer = ["LEHMANN"];
 			const localStorageKey = `cricketer_${correctPlayer}_${gameDetails.date}`;
-
-if (localStorage.getItem(localStorageKey)) {
-  guessInputs.forEach((input) => input.querySelector("input").disabled = true);
+			
+			if (localStorage.getItem(localStorageKey)) {
+guessInputs.forEach((input) => input.querySelector("input").disabled = true);
   submitButtons.forEach((button) => button.disabled = true);
-	congratulationsElement.style.display = "block";
+    document.getElementById("answer").style.display = "block";
+    document.getElementById("correct-answer").textContent = correctPlayer;
+    // If the answer was guessed correctly before, show congratulations element instead of answer element
+    if (localStorage.getItem(localStorageKey) === "guessed") {
+        document.getElementById("congratulations").style.display = "block";
+	    document.getElementById("answer").style.display = "none";
+    }
 } else {
-  document.querySelectorAll(".guess-input").forEach((guessInput) => guessInput.style.display = "block");
-  document.querySelectorAll("button[id^='submit']").forEach((button) => button.disabled = false);
+    // If the cricketer has not been played before, enable guess inputs and submit buttons
+    document.querySelectorAll(".guess-input").forEach((guessInput) => guessInput.style.display = "block");
+    document.querySelectorAll("button[id^='submit']").forEach((button) => button.disabled = false);
 }
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
