--- a/index.html
+++ b/index.html
@@ -449,14 +449,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "Sri Lanka",
-				nation2: "Australia",
-				date: "Mar 24-28, 2004",
-				score: "Australia 401 & 375, Sri Lanka (T: 370) 407 & 248; Australia won by 121 runs",
-				crickdlequestion: "Australia player scored 153 and took 3/50 & 3/42 in this match?"
+				nation1: "England",
+				nation2: "South Africa",
+				date: "Aug 17-19, 2022",
+				score: "England 165 & 149, South Africa 326; South Africa won by an innings and 12 runs",
+				crickdlequestion: "South Africa player took 5/52 & 2/27 in this match?"
 			};
 
-			const correctPlayer = ["LEHMANN"];
+			const correctPlayer = ["RABADA"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
