--- a/index.html
+++ b/index.html
@@ -457,6 +457,24 @@
 			};
 
 			const correctPlayer = ["RABADA"];
+			const currentCricketer = gameDetails.crickdlequestion + "_" + gameDetails.date;
+			
+			const hasPlayed = localStorage.getItem(currentCricketer);
+
+if (hasPlayed) {
+  // User has already played this game, disable inputs and display message
+  guessInputs.forEach(input => input.querySelector("input").disabled = true);
+  submitButtons.forEach(button => button.disabled = true);
+  congratulationsElement.style.display = "none";
+  answerElement.style.display = "block";
+  correctAnswerElement.textContent = "come back tomorrow to guess another cricketer";
+} else {
+  // User has not played this game yet, allow inputs and hide message
+  guessInputs.forEach(input => input.querySelector("input").disabled = false);
+  submitButtons.forEach(button => button.disabled = false);
+  congratulationsElement.style.display = "none";
+  answerElement.style.display = "none";
+}
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
@@ -492,6 +510,8 @@
 						} else {
 							answerElement.style.display = "block";
 							correctAnswerElement.textContent = correctPlayer[0];
+							localStorage.setItem(currentCricketer, true);
+
 						}
 					
 					} else {
@@ -504,6 +524,8 @@
 						} else {
 							answerElement.style.display = "block";
 							correctAnswerElement.textContent = correctPlayer[0];
+							localStorage.setItem(currentCricketer, true);
+
 						}
 					}
 					
