--- a/index.html
+++ b/index.html
@@ -454,6 +454,8 @@
     submitButtons.forEach(button => button.disabled = true);
     answerElement.style.display = "block";
     answerElement.style.fontWeight = "normal";
+	  	  answerElement.style.color = "black";
+	  answerElement.style.fontSize = "1.1rem";
     answerElement.textContent = "Come back tomorrow to guess another cricketer.";
   }
 });
@@ -489,6 +491,8 @@ if (isGamePlayed()) {
   submitButtons.forEach(button => button.disabled = true);
   answerElement.style.display = "block";
   answerElement.style.fontWeight = "normal";
+	  answerElement.style.color = "black";
+	  answerElement.style.fontSize = "1.1rem";
   answerElement.textContent = "Come back tomorrow to guess another cricketer.";
 }
 			
