--- a/duck.html
+++ b/duck.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Waiting Page</title>
+	<title>Crickdle - Daily Cricket Guessing Game | Test Your Cricket Knowledge!</title>
+		<link rel="icon" type="image/x-icon" href="favicon.ico.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta charset="UTF-8">
 	<style>
@@ -21,6 +22,7 @@
 			display: inline-block;
 			width: 2rem;
                         font-weight: bold;
+			color: #e4a404;
 		}
 		.text-large {
 			font-size: 2rem;
