--- a/bowled.html
+++ b/bowled.html
@@ -22,6 +22,7 @@
 			display: inline-block;
 			width: 2rem;
                         font-weight: bold;
+			color: #e4a404;
 		}
 		.text-large {
 			font-size: 2rem;
