--- a/bowled.html
+++ b/bowled.html
@@ -22,7 +22,7 @@
 			display: inline-block;
 			width: 2rem;
                         font-weight: bold;
-			color: #e4a404;
+			color: #787c7f;
 		}
 		.text-large {
 			font-size: 2rem;
