--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
 						guessInput.style.color = "white";
 						congratulationsElement.style.display = "block";
 						answerElement.style.display = "none";
+						window.location.href = "bowled.html"
 					} else if (isClose(guess, correctPlayer)) {
 						guessInput.style.backgroundColor = "#e4a404";
 						guessInput.style.color = "white";
@@ -492,6 +493,7 @@
 						} else {
 							answerElement.style.display = "block";
 							correctAnswerElement.textContent = correctPlayer[0];
+							window.location.href = "duck.html"
 						}
 					
 					} else {
@@ -504,6 +506,7 @@
 						} else {
 							answerElement.style.display = "block";
 							correctAnswerElement.textContent = correctPlayer[0];
+							window.location.href = "duck.html"
 						}
 					}
 					
