--- a/duck.html
+++ b/duck.html
@@ -28,7 +28,7 @@
 <body>
 	<div class="container">
 		<p class="text-large">Out for a duck!</p>
-		<p>You didnt get today's Crickdle.</p>
+		<p>You didnt get today's Crickdle. The answer is RABADA.</p>
 		<p>Come back tomorrow to guess another cricketer.</p>
 		<p id="countdown"></p>
 	</div>
