--- a/bowled.html
+++ b/bowled.html
@@ -18,6 +18,11 @@
 			left: 50%;
 			transform: translate(-50%, -50%);
 		}
+		.dash {
+			display: inline-block;
+			width: 2rem;
+                        font-weight: bold;
+		}
 		.text-large {
 			font-size: 2rem;
 			font-weight: bold;
@@ -28,6 +33,10 @@
 <body>
 	<div class="container">
 		<p class="text-large">Bowled 'im!</p>
+		<span class="dash" id="dash1">—</span>
+		<span class="dash" id="dash2">—</span>
+		<span class="dash" id="dash3">—</span>
+		<span class="dash" id="dash4">—</span>
 		<p>You got today's Crickdle.</p>
 		<p>Come back tomorrow to guess another cricketer.</p>
 		<p id="countdown"></p>
