--- a/bowled.html
+++ b/bowled.html
@@ -49,10 +49,10 @@
   const guess3Color = urlParams.get("guess3");
   const guess4Color = urlParams.get("guess4");
 
-  document.getElementById("dash1").style.Color = guess1Color;
-  document.getElementById("dash2").style.Color = guess2Color;
-  document.getElementById("dash3").style.Color = guess3Color;
-  document.getElementById("dash4").style.Color = guess4Color;
+  document.getElementById("dash1").style.color = guess1Color;
+  document.getElementById("dash2").style.color = guess2Color;
+  document.getElementById("dash3").style.color = guess3Color;
+  document.getElementById("dash4").style.color = guess4Color;
 		
 		// Set the target time for the next Crickdle (9am UK time).
 		const targetTime = new Date();
