--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 				<button id="submit4" disabled><b>ENTER</b></button>
 			</div>
 			<div id="congratulations" style="display:none">
-				<p><b>Bowled 'im! You got the answer.</b><br><span style="color: black">Come back tomorrow to guess another cricketer.</span></p>
+				<p><b>Bowled 'em! You got the answer.</b><br><span style="color: black">Come back tomorrow to guess another cricketer.</span></p>
 			</div>
 			<div id="answer" style="display:none">
 				<p><b>Out for a duck! The answer is <span id="correct-answer"></span>.</b><br><span style="color: black">Come back tomorrow to guess another cricketer.</span></p>
