--- a/bowled.html
+++ b/bowled.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 	<div class="container">
-		<p class="text-large">Bowled 'im!</p>
+		<p class="text-large">Bowled 'em!</p>
 		<span class="dash" id="dash1">—</span>
 		<span class="dash" id="dash2">—</span>
 		<span class="dash" id="dash3">—</span>
