--- a/duck.html
+++ b/duck.html
@@ -21,7 +21,7 @@
 		.dash {
 			display: inline-block;
 			width: 2rem;
-                        font-weight: 2000;
+                        font-weight: bolder;
 		}
 		.text-large {
 			font-size: 2rem;
