--- a/index.html
+++ b/index.html
@@ -422,14 +422,14 @@
 		</div>
 		<script>
 			const gameDetails = {
-				nation1: "England",
-				nation2: "South Africa",
-				date: "Aug 17-19, 2022",
-				score: "England 165 & 149, South Africa 326; South Africa won by an innings and 12 runs",
-				crickdlequestion: "South Africa player took 5/52 & 2/27 in this match?"
+				nation1: "Sri Lanka",
+				nation2: "India",
+				date: "Jul 26-30, 2010",
+				score: "Sri Lanka 642/4d & 129/3d, India 707; Match drawn",
+				crickdlequestion: "Sri Lanka player scored 219 & 42* in this match?"
 			};
 
-			const correctPlayer = ["RABADA"];
+			const correctPlayer = ["SANGAKKARA"];
 			
 			document.getElementById("nation1").textContent = gameDetails.nation1;
 			document.getElementById("nation2").textContent = gameDetails.nation2;
