--- a/duck.html
+++ b/duck.html
@@ -37,7 +37,7 @@
 		<span class="dash" id="dash2">—</span>
 		<span class="dash" id="dash3">—</span>
 		<span class="dash" id="dash4">—</span>
-		<p>You didnt get today's Crickdle. The answer is <b>RABADA</b>.</p>
+		<p>You didnt get today's Crickdle. The answer is <b>SANGAKKARA</b>.</p>
 		<p>Come back tomorrow to guess another cricketer.</p>
 		<p id="countdown"></p>
 	</div>
